--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Freshie Sorter 2.0</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>freshiesorter</title>
   </head>
   <body>
-    <h1>
-      Sorting Hat 2.0
-    </h1>
-    <h3>
-      Now with more impartiality!
-    </h3>
-    <div id="app">
-      {{ message }}
-      <dropzone> </dropzone>
-    </div>
-    <script src="dist/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="src/frontend.js"></script>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
